--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,26 @@
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
+
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "components/button";
+@import "components/form";
+@import "components/gallery";
+@import "components/preloader";
+@import "components/ratings";
+@import "components/navigation";
+@import "components/navs";
+@import "components/search";
+
+
+
+@import "layout/grid";
+@import "layout/header";
+@import "layout/layout";
+
+
+@import "pages/home";
+@import "pages/login";
