--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,1 +1,19 @@
 
+*,
+*::before,
+*::after {
+      margin: 0;
+      padding: 0;
+      box-sizing: inherit;
+}
+
+html {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+      font-size: 62.5%;
+}
+body {
+      overflow-x: hidden;
+}
+
+@include root;
