--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -19,4 +19,15 @@
             text-align: left;
             color: var(--white);
       }
+      &__movie {
+            margin-bottom: 6.5rem;
+            cursor: pointer;
+      }
+      &__link {
+            &,
+            &:link,
+            &:visited {
+                  text-decoration: none;
+            }
+      }
 }
