--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,26 +1,30 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-
+// Base files
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
+//Components
 @import "components/button";
+@import "components/checkbox";
 @import "components/form";
 @import "components/gallery";
-@import "components/preloader";
-@import "components/ratings";
 @import "components/navigation";
 @import "components/navs";
+@import "components/preloader";
+@import "components/ratings";
 @import "components/search";
+@import "components/user";
 
 
-
+//Layout
 @import "layout/grid";
 @import "layout/header";
 @import "layout/layout";
 
-
+//Page styles
 @import "pages/home";
 @import "pages/login";
+@import "pages/movie";
