--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -28,6 +28,10 @@ body {
       }
       margin-bottom: 3.4rem;
 
+      &--movie {
+            margin-bottom: 1.6rem;
+      }
+
 }
 
 .paragraph {
@@ -55,5 +59,12 @@ body {
       }
       &--sub {
             text-align: right;
+      }
+      &--active {
+            color:var(--orange);
+            display: inline-block !important;
+            font-size: 1.4rem;
+            line-height: 1.7rem;
+            margin-left: 2px;
       }
 }
