--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,10 +11,12 @@
 @import "components/checkbox";
 @import "components/form";
 @import "components/gallery";
+@import "components/movie";
 @import "components/navigation";
 @import "components/navs";
 @import "components/preloader";
 @import "components/ratings";
+@import "components/review";
 @import "components/search";
 @import "components/user";
 
@@ -25,6 +27,7 @@
 @import "layout/layout";
 
 //Page styles
+@import "pages/extraction";
 @import "pages/home";
 @import "pages/login";
 @import "pages/movie";
