--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -1,9 +1,9 @@
 .main {
-      background-image: url(/images/signup-intro.png);
-      background-color: var(--black);
-
+  background-image: url(/images/signup-intro.png);
+  background-color: var(--black);
+  height: 100vh;
 }
 .section-form {
-      padding-top: 22.1rem;
-      padding-left: 3rem;
+  padding-top: 10rem;
+  padding-left: 3rem;
 }
