--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,19 +1,32 @@
-
 *,
 *::before,
 *::after {
-      margin: 0;
-      padding: 0;
-      box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 @include root;
 
 html {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-      font-size: 62.5%;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+  @include responsive(tabletLandscape) {
+    font-size: 56.25%;
+  }
+  @include responsive(tabletPortrait) {
+    font-size: 50%;
+  }
+  @include responsive(bigDesktop) {
+    font-size: 75%;
+  }
 }
 body {
-      overflow-x: hidden;
+  overflow-x: hidden;
+}
+
+img {
+  display: block;
+  width: 100%;
 }
