--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -1,33 +1,34 @@
 .gallery {
-      &__image-box {
-            margin-bottom: 1.6rem;
-      }
-      &__header {
-            font-size: 1.8rem;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 2.2rem;
-            letter-spacing: 0em;
-            color: var(--white);
-      }
-      &__date {
-            font-size: 1.8rem;
-            font-style: normal;
-            font-weight: 1;
-            line-height: 2.2rem;
-            letter-spacing: 0em;
-            text-align: left;
-            color: var(--white);
-      }
-      &__movie {
-            margin-bottom: 6.5rem;
-            cursor: pointer;
-      }
-      &__link {
-            &,
-            &:link,
-            &:visited {
-                  text-decoration: none;
-            }
-      }
+  &__image-box {
+    margin-bottom: 1.6rem;
+  }
+  &__header {
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.2rem;
+    letter-spacing: 0em;
+    color: var(--white);
+  }
+  &__date {
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 1;
+    line-height: 2.2rem;
+    letter-spacing: 0em;
+    text-align: left;
+    color: var(--white);
+  }
+  &__movie {
+    margin-bottom: 6.5rem;
+    cursor: pointer;
+  }
+  &__link {
+    &,
+    &:link,
+    &:visited {
+      text-decoration: none;
+    }
+    flex: 0 0 25%;
+  }
 }
