--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,8 @@ body {
   cursor: pointer; }
 
 .gallery__link {
-  flex: 0 0 25%; }
+  flex: 0 0 20%;
+  padding: 0 3rem; }
   .gallery__link, .gallery__link:link, .gallery__link:visited {
     text-decoration: none; }
 
